--- a/package.json
+++ b/package.json
@@ -111,8 +111,8 @@
     "why-did-you-update": "^0.1.1"
   },
   "dependencies": {
-    "airbnb-prop-types": "^2.10.0",
-    "consolidated-events": "^1.1.1 || ^2.0.0",
+    "airbnb-prop-types": "^2.11.0",
+    "consolidated-events": "^2.0.2",
     "is-touch-device": "^1.0.1",
     "lodash": "^4.1.1",
     "object.assign": "^4.1.0",
@@ -120,10 +120,10 @@
     "prop-types": "^15.6.1",
     "react-addons-shallow-compare": "^15.6.2",
     "react-moment-proptypes": "^1.6.0",
-    "react-outside-click-handler": "^1.2.0",
+    "react-outside-click-handler": "^1.2.2",
     "react-portal": "^4.1.5",
     "react-with-direction": "^1.3.0",
-    "react-with-styles": "^3.2.0",
+    "react-with-styles": "^3.2.1",
     "react-with-styles-interface-css": "^4.0.2"
   },
   "peerDependencies": {
